@@ -41,6 +41,9 @@ void dataxfer_init(void);
    integers.  Error output will be generated on invalid data. */
 void showports(struct controller_info *cntlr, char *portspec);
 
+/* Show information about a port (as above) but in a one-line format. */
+void showshortports(struct controller_info *cntlr, char *portspec);
+
 /* Set the port's timeout.  The parameters are all strings that the
    routine will convert to integers.  Error output will be generated
    on invalid data. */
