@@ -54,6 +54,10 @@ viewing their status. To accomplish this, it has the following commands:
 .B showport [<TCP port>]
 Show information about a port. If no port is given, all ports are displayed.
 .TP
+.B showshortport [<TCP port>]
+Show information about a port, each port on one line. If no port is given,
+all ports are displayed.  This can produce very wide output.
+.TP
 .B help
 Display a short list and summary of commands.
 .TP
